# peripheral_manager

./: .gitignore  Cargo.toml  README.md
examples/: monitor_peripheral.rs
src/: api.rs  core.rs  enums.rs  lib.rs  main.rs  peripheral.rs
