[package]
name = "peripheral_manager"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "peripheral_manager"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1.52"
btleplug = {path = "../btleplug" }
#btleplug = {version = "0.10.5", git = "https://gitlab.licheng-tech.com/hardware/software/tools/btleplug.git" }
# usb_manager = { path = "../usb_manager"}
usb_manager = { version = "0.1.5",git="https://gitlab.licheng-tech.com/hardware/software/tools/usb_manager.git"}
crossbeam-channel = "0.5.6"
uuid = { version = "1.3.0", features = ["serde", "v4"] }
anyhow = { version = "1.0", features = ["backtrace"] }
thiserror = "1"
futures = "0.3.21"
tokio = {version =  "1.20.1", features = ["sync"]}
tokio-stream = { version = "0.1.8", features = ["sync"] }
strum = "0.24.0"
strum_macros = "0.24.0"
dashmap = "5.1.0"
lazy_static = "1.4.0"

[dev-dependencies]
tokio-test = "0.4.2"
tokio = { version = "1.22.0", features = ["macros", "rt", "rt-multi-thread"] }
